--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <!--tasker-->
  <div id="tasker" class="tasker">
   <label id="lblGreetings"></label>
+   <p id="demo"></p>
  <div id="error" class="error">Please Enter a Task</div>
    <h1>MyDay</h1>
  <div id="todo-header" class="todo-header">
